package ar.edu.utn.ba.ddsi.practica.dds_practica_e1_smartlife.services;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.stereotype.Component;

@Component
@Data
@NoArgsConstructor
@AllArgsConstructor
public class FacturaMensual {

    private Cliente cliente;
    public double calcularMonto() {
        return cliente.calcularMonto();
    }
}
