@startuml
'https://plantuml.com/class-diagram

class FacturaMensual
{
- Cliente cliente
+ double calcularMonto()
}

class Cliente {
- Set<Dispositivo> dispositivos
- Plan plan
+ double calcularMonto()
- void registrarDispositivo(Dispositivo dispositivo)
- void eliminarDispositivo(Dispositivo dispositivo)
}

class Dispositivo
{
- double costo
+ double getCosto()
}

abstract class Plan {
# double montoBase
+ {abstract} double calcularMonto(Set<Dispositivo> dispositivos)
}

class PlanCorporativo {
- double descuento
+ calcularMonto(Set<Dispositivo> dispositivos)
}
class PlanComercio {
+ calcularMonto(Set<Dispositivo> dispositivos)
}
class PlanHogar {
+ calcularMonto(Set<Dispositivo> dispositivos)
}

Cliente *-- Plan : compone
Plan <|-- PlanCorporativo : hereda
Plan <|-- PlanComercio : hereda
Plan <|-- PlanHogar : hereda
Cliente <-- FacturaMensual : contiene 1
Dispositivo "*" <-- Cliente: simple
@enduml